// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageItem> renders a loading author 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="profilePhoto-0-2-10 tableCell-0-2-9"
  >
    <Shimmer
      height={32}
      radius="50%"
      width={32}
    />
  </div>
  <div
    className="messageBody-0-2-12 tableCell-0-2-9"
  >
    <Spacing
      bottom={0.5}
    >
      <Spacing
        inline={true}
        right={1}
      >
        <Shimmer
          height={14}
          width={175}
        />
      </Spacing>
      <Text
        inline={true}
        muted={true}
        small={true}
      >
        11:56 AM
      </Text>
    </Spacing>
    Hello world
  </div>
</div>
`;

exports[`<MessageItem> renders a message item 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`horizontalSpacing\` 1`] = `
<div
  className="container-0-2-1 container_horizontalSpacing-0-2-2"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`important\` 1`] = `
<div
  className="container-0-2-1 container_withStripe-0-2-4 container_important-0-2-5"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`info\` stripe 1`] = `
<div
  className="container-0-2-1 container_withStripe-0-2-4 container_info-0-2-6"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`verticalSpacing\` 1`] = `
<div
  className="container-0-2-1 container_verticalSpacing-0-2-3"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`warning\` stripe 1`] = `
<div
  className="container-0-2-1 container_withStripe-0-2-4 container_warning-0-2-7"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a sending overlay when message is sending 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
  <div
    className="sendingOverlay-0-2-16"
  />
</div>
`;

exports[`<MessageItem> renders a source when given 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM via web
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a title tag when given 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <span
          className="tag-0-2-17"
        >
          <Text
            inline={true}
            micro={true}
            muted={true}
          >
            CX
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders an email when given 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="table-0-2-8"
  >
    <div
      className="profilePhoto-0-2-10 tableCell-0-2-9"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody-0-2-12 tableCell-0-2-9"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle-0-2-14"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
        <Text
          muted={true}
          small={true}
        >
          <Translate
            context="Who the message is from"
            email="foo@airbnb.com"
            html={true}
            phrase="From: %{email}"
          />
        </Text>
      </Spacing>
      <div
        className="messageBodyContent-0-2-13"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;
